--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Lato:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet"> 
-    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300&family=Kaushan+Script&family=Roboto:wght@500&display=swap" rel="stylesheet">    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -26,7 +26,7 @@
                 <img src="assets/insta-icon.png"/>
                 <img src="assets/flic-icon.png"/>
                 <img src="assets/pint-icon.png"/>
-                <img src="assets/rss-icon.png"/>
+                <img class="social-space" src="assets/rss-icon.png"/>
                 <img src="assets/mail-icon.png"/>
 
             </div>
