--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             </div>
         </div>
+        <div class="clear"></div>
         <div class="divider"></div>
         <h1>Chocolate Pizza</h1>
         <div>
