--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300&family=Kaushan+Script&family=Roboto:wght@500&display=swap" rel="stylesheet">    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300&family=Kaushan+Script&family=Pragati+Narrow:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
@@ -34,6 +33,16 @@
         <div class="clear"></div>
         <div class="divider"></div>
         <h1>Chocolate Pizza</h1>
+        <div class="metadata">
+            <div class="date">
+                posted on 15 dec 2013 / desserts
+            </div>
+            <div class="print">
+
+                print
+            </div>
+        </div>
+        <div class="clear"></div>
         <div>
             For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely. 
         </div>
