--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@
         <p class="desc">
             Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tuppenvare. Freeze for at least two hours before serving. 
         </p>
+        <div class="list-bg">
+            <img class="notebook" src="assets/list-bg.png"/>
+            <ul>
+                <li>1 1/2 cups milk </li>
+                <li>1/2 cup mascarpone </li>
+                <li>1/2 tsp pink salt </li>
+                <li>1 lb Black Mission Figs </li>
+                <li>1/2 cup brown sugar </li>
+                <li>2-4 tbsp water</li>
+                <li>1 1/2 cups heavy cream </li>
+                <li>1/3 granulated sugar </li>
+                <li>2 egg yolks </li>
+                <li>1 lemon, juiced </li>
+                <li>2 tbsp buffer </li>
+                <li>1 cup honey roasted pecans, roughly chopped</li>
+            </ul>
+        </div>
     </div>
     
 </body>
