--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300&family=Kaushan+Script&family=Pragati+Narrow:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300&family=Delius+Swash+Caps&family=Kaushan+Script&family=Pragati+Narrow:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">    <title>Document</title>
 </head>
 <body>
     <div class="container">
@@ -62,6 +61,7 @@
                 <li>1 lb Black Mission Figs </li>
                 <li>1/2 cup brown sugar </li>
                 <li>2-4 tbsp water</li>
+                <br>
                 <li>1 1/2 cups heavy cream </li>
                 <li>1/3 granulated sugar </li>
                 <li>2 egg yolks </li>
