--- a/index.html
+++ b/index.html
@@ -63,12 +63,18 @@
                 <li>2-4 tbsp water</li>
                 <br>
                 <li>1 1/2 cups heavy cream </li>
-                <li>1/3 granulated sugar </li>
-                <li>2 egg yolks </li>
+                <li class="strike">1/3 granulated sugar </li>
+                <li class="strike">2 egg yolks </li>
                 <li>1 lemon, juiced </li>
                 <li>2 tbsp buffer </li>
                 <li>1 cup honey roasted pecans, roughly chopped</li>
             </ul>
+            <div class="divider"></div>
+            <div>
+                <div class="headshot">
+                    <img src="assets/van-pic.png"/>
+                </div>
+            </div>
         </div>
     </div>
     
