--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
             </ul>
             <div class="divider"></div>
             <div>
-                <div class="headshot">
-                    <img src="assets/van-pic.png"/>
+                <img class="headshot" src="assets/van-pic.png"/>
+                <div class="author">
+                    <h2>Vanessa Stevenson</h2>
+                    <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
                 </div>
+                <div class="share">Share Recipe</div>
             </div>
         </div>
     </div>
