--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                 </div>
                 <div class="share">Share Recipe</div>
             </div>
+            <div class="clear"></div>
+            <div class="line-divider">
+                <img src="assets/small-logo.png"/>
+            </div>
         </div>
     </div>
     
