--- a/index.html
+++ b/index.html
@@ -69,20 +69,21 @@
                 <li>2 tbsp buffer </li>
                 <li>1 cup honey roasted pecans, roughly chopped</li>
             </ul>
-            <div class="divider"></div>
-            <div>
-                <img class="headshot" src="assets/van-pic.png"/>
-                <div class="author">
-                    <h2>Vanessa Stevenson</h2>
-                    <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
-                </div>
-                <div class="share">Share Recipe</div>
-            </div>
-            <div class="clear"></div>
-            <div class="line-divider">
-                <img src="assets/small-logo.png"/>
-            </div>
         </div>
+        <div class="divider"></div>
+        <div>
+            <img class="headshot" src="assets/van-pic.png"/>
+            <div class="author">
+                <h2>Vanessa Stevenson</h2>
+                <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+            </div>
+            <div class="share">Share Recipe</div>
+        </div>
+        <div class="clear"></div>
+        <div class="line-divider">
+            <img src="assets/small-logo.png"/>
+        </div>
+        <p class="endnote">Delicious © 2013 • All Rights Reserved.<br/>Proudly published with Ghost.</p>
     </div>
     
 </body>
